--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 body {
   margin: 0;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #2f2f37;
+}
+
+::-webkit-scrollbar-thumb {
+  border: 6px solid #8585ad;
+  background: #8585ad;
+  border-radius: 10px;
+  background-clip: padding-box;
+}
